Fix and optimize cross-platform browser streaming